--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Happy Birthday Momina 🎂</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2.10.4/dist/fireworks.js"></script>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #0a0a0a;
+      background: linear-gradient(to bottom, #000010, #1a001a);
       overflow-x: hidden;
       color: #fff;
     }
-
     header {
       text-align: center;
       padding: 2rem 1rem;
@@ -22,12 +22,10 @@
       color: #ffd700;
       animation: glow 2s ease-in-out infinite alternate;
     }
-
     @keyframes glow {
       from { text-shadow: 0 0 10px #fff; }
       to { text-shadow: 0 0 30px #ff1493; }
     }
-
     .options {
       display: flex;
       flex-direction: column;
@@ -35,7 +33,6 @@
       gap: 1rem;
       margin-top: 2rem;
     }
-
     .options button {
       background: #fff;
       color: #ff1493;
@@ -44,63 +41,43 @@
       font-size: 1.2rem;
       border-radius: 30px;
       cursor: pointer;
-      transition: transform 0.3s, box-shadow 0.3s;
+      transition: transform 0.3s;
     }
-
     .options button:hover {
       transform: scale(1.1);
-      box-shadow: 0 0 20px #ff69b4;
     }
-
     .content {
       padding: 2rem;
       text-align: center;
       display: none;
-      opacity: 0;
-      transition: opacity 1s ease;
     }
-
     .visible {
       display: block;
-      opacity: 1;
     }
-
     .typing {
       font-size: 1.3rem;
       margin-top: 2rem;
       white-space: pre-line;
     }
-
     .rose {
       position: fixed;
-      width: 40px;
-      height: 40px;
+      width: 60px;
+      height: 60px;
       background: url('https://i.imgur.com/yb6nQhY.png') no-repeat center center / contain;
-      animation: fall 6s linear forwards;
+      animation: fall 10s linear;
       top: -60px;
       pointer-events: none;
-      z-index: 5;
+      z-index: 100;
     }
-
     @keyframes fall {
-      0% { transform: translateY(0) rotate(0); opacity: 1; }
+      0% { transform: translateY(0) rotate(0deg); opacity: 1; }
       100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
     }
-
     .gift-box {
       font-size: 3rem;
       cursor: pointer;
       margin-top: 2rem;
     }
-
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      pointer-events: none;
-      z-index: 1;
-    }
-
     form textarea {
       width: 80%;
       padding: 1rem;
@@ -109,7 +86,6 @@
       border: none;
       font-size: 1rem;
     }
-
     form input[type="submit"] {
       padding: 1rem 2rem;
       background: white;
@@ -119,24 +95,35 @@
       font-size: 1rem;
       cursor: pointer;
     }
+    #fireworks-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 999;
+    }
   </style>
 </head>
 <body>
   <audio id="bg-music">
-    <source src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthdaySong.mp3" type="audio/mp3" />
+    <source src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthdaySong.mp3" type="audio/mp3">
   </audio>
 
   <header>🎂 Happy Birthday, Momina! 🎉</header>
 
   <div class="options">
-    <button onclick="showSectionWithRoses('wish')">💌 Read Your Wish</button>
-    <button onclick="showSectionWithRoses('game1')">🎯 Score Game</button>
-    <button onclick="showSectionWithRoses('game2')">🧠 Romantic Questions</button>
-    <button onclick="showSectionWithRoses('gift')">🎁 Surprise Gift</button>
+    <button onclick="playTransition('wish')">💌 Read Your Wish</button>
+    <button onclick="playTransition('game1')">🎯 Score Game</button>
+    <button onclick="playTransition('game2')">🧠 Romantic Questions</button>
+    <button onclick="playTransition('gift')">🏱 Surprise Gift</button>
     <button onclick="startFireworks()">🎆 Fireworks</button>
   </div>
 
-  <div class="content" id="wish"><p class="typing"></p></div>
+  <div class="content" id="wish">
+    <p class="typing"></p>
+  </div>
 
   <div class="content" id="game1">
     <h2>🎯 Score Game</h2>
@@ -157,18 +144,17 @@
   </div>
 
   <div class="content" id="gift">
-    <h2>🎁 Click the Gift!</h2>
-    <div class="gift-box" onclick="revealGift()">🎁</div>
+    <h2>🏱 Click the Gift!</h2>
+    <div class="gift-box" onclick="revealGift()">🏱</div>
     <p id="gift-text"></p>
   </div>
 
-  <canvas id="fireworks"></canvas>
+  <div id="fireworks-container"></div>
 
   <script>
-    const fullMessage = `Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.`;
-    let index = 0;
+    const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.";
     const typingElem = document.querySelector(".typing");
-
+    let index = 0;
     function typeWish() {
       if (index < fullMessage.length) {
         typingElem.innerHTML += fullMessage.charAt(index);
@@ -177,90 +163,70 @@
       }
     }
 
-    function showSectionWithRoses(id) {
-      createRoseRain();
-      setTimeout(() => {
-        document.querySelectorAll('.content').forEach(div => {
-          div.classList.remove('visible');
-          div.style.display = 'none';
-        });
-        const target = document.getElementById(id);
-        target.style.display = 'block';
-        setTimeout(() => target.classList.add('visible'), 50);
+    function playTransition(targetId) {
+      const audio = document.getElementById('bg-music');
+      audio.volume = 1.0;
+      audio.play();
 
-        if (id === 'wish') {
-          index = 0;
-          typingElem.innerHTML = '';
-          document.getElementById('bg-music').play();
-          typeWish();
-        }
-      }, 1200);
-    }
-
-    function increaseScore() {
-      const scoreElem = document.getElementById('score');
-      scoreElem.textContent = +scoreElem.textContent + 1;
-    }
-
-    function revealGift() {
-      document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🎁❤️";
-    }
-
-    // Rose Rain Animation
-    function createRoseRain() {
-      for (let i = 0; i < 30; i++) {
+      for (let i = 0; i < 20; i++) {
         const rose = document.createElement('div');
         rose.className = 'rose';
         rose.style.left = Math.random() * window.innerWidth + 'px';
         document.body.appendChild(rose);
-        setTimeout(() => rose.remove(), 6000);
+        setTimeout(() => rose.remove(), 10000);
+      }
+      setTimeout(() => showSection(targetId), 2000);
+    }
+
+    function showSection(id) {
+      document.querySelectorAll('.content').forEach(div => div.classList.remove('visible'));
+      document.getElementById(id).classList.add('visible');
+      if (id === 'wish') {
+        index = 0;
+        typingElem.innerHTML = '';
+        typeWish();
       }
     }
 
-    // Fireworks
-    const canvas = document.getElementById('fireworks');
-    const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-    let fireworksActive = false;
-    let particles = [];
+    let score = 0;
+    function increaseScore() {
+      score++;
+      document.getElementById('score').textContent = score;
+    }
 
+    function revealGift() {
+      document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🏱❤️";
+    }
+
+    let fireworksInstance = null;
     function startFireworks() {
-      fireworksActive = true;
+      if (fireworksInstance) return;
+      const container = document.getElementById('fireworks-container');
+      fireworksInstance = new Fireworks.default(container, {
+        rocketsPoint: { min: 20, max: 80 },
+        hue: { min: 0, max: 360 },
+        delay: { min: 15, max: 30 },
+        speed: 2,
+        acceleration: 1.05,
+        friction: 0.97,
+        gravity: 1.5,
+        particles: 100,
+        trace: 3,
+        explosion: 5,
+        autoresize: true,
+        brightness: { min: 50, max: 80 },
+        sound: {
+          enabled: true,
+          files: ["https://www.fesliyanstudios.com/play-mp3/387"],
+          volume: 1.0
+        }
+      });
+      fireworksInstance.start();
+      setTimeout(() => {
+        fireworksInstance.stop();
+        fireworksInstance = null;
+      }, 10000);
     }
-
-    document.addEventListener('click', function(e) {
-      if (!fireworksActive) return;
-      const x = e.pageX, y = e.pageY;
-      for (let i = 0; i < 50; i++) {
-        let angle = Math.random() * 2 * Math.PI;
-        let speed = Math.random() * 5 + 2;
-        let dx = Math.cos(angle) * speed;
-        let dy = Math.sin(angle) * speed;
-        let radius = Math.random() * 3 + 2;
-        let color = `hsl(${Math.random() * 360}, 100%, 70%)`;
-        particles.push({ x, y, dx, dy, radius, color, alpha: 1 });
-      }
-    });
-
-    function animateFireworks() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      particles = particles.filter(p => p.alpha > 0);
-      for (let p of particles) {
-        ctx.beginPath();
-        ctx.globalAlpha = p.alpha;
-        ctx.fillStyle = p.color;
-        ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
-        ctx.fill();
-        p.x += p.dx;
-        p.y += p.dy;
-        p.alpha -= 0.02;
-      }
-      ctx.globalAlpha = 1;
-      requestAnimationFrame(animateFireworks);
-    }
-
-    animateFireworks();
   </script>
 </body>
 </html>
