--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF‑8" />
-  <meta name="viewport" content="width=device-width, initial‑scale=1.0" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Happy Birthday Momina 🎂</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2.10.8/dist/index.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2.10.4/dist/fireworks.js"></script>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(to bottom, #000010, #1a001a);
-      color: #fff;
       overflow-x: hidden;
+      color: #fff;
     }
     header {
       text-align: center;
-      padding: 2rem;
-      font-family: 'Great Vibes', cursive;
+      padding: 2rem 1rem;
       font-size: 2.5rem;
+      font-family: 'Great Vibes', cursive;
       color: #ffd700;
       animation: glow 2s ease-in-out infinite alternate;
     }
-    @keyframes glow { from { text-shadow: 0 0 10px #fff } to { text-shadow: 0 0 30px #ff1493 } }
+    @keyframes glow {
+      from { text-shadow: 0 0 10px #fff; }
+      to { text-shadow: 0 0 30px #ff1493; }
+    }
     .options {
       display: flex;
       flex-direction: column;
@@ -31,46 +34,79 @@
       margin-top: 2rem;
     }
     .options button {
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
-      border: none;
-      border-radius: 30px;
       background: #fff;
       color: #ff1493;
+      border: none;
+      padding: 1rem 2rem;
+      font-size: 1.2rem;
+      border-radius: 30px;
       cursor: pointer;
-      transition: transform .3s;
+      transition: transform 0.3s;
     }
-    .options button:hover { transform: scale(1.1) }
-    .content { display: none; padding: 2rem; text-align: center }
-    .visible { display: block }
-    .typing { font-size: 1.3rem; white-space: pre-line; margin-top: 2rem }
+    .options button:hover {
+      transform: scale(1.1);
+    }
+    .content {
+      padding: 2rem;
+      text-align: center;
+      display: none;
+    }
+    .visible {
+      display: block;
+    }
+    .typing {
+      font-size: 1.3rem;
+      margin-top: 2rem;
+      white-space: pre-line;
+    }
     .rose {
       position: fixed;
       width: 100px;
       height: 100px;
-      background: url('https://i.imgur.com/ZF6s192.png') no-repeat center center/contain;
-      animation: fall 8s linear;
-      top: -120px;
+      background: url('https://i.imgur.com/ZF6s192.png') no-repeat center center / contain;
+      animation: fall 10s linear;
+      top: -100px;
       pointer-events: none;
       z-index: 100;
     }
     @keyframes fall {
-      to { transform: translateY(100vh) rotate(360deg); opacity: 0 }
+      0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+      100% { transform: translateY(100vh) rotate(720deg); opacity: 0; }
     }
-    .gift-box { font-size: 3rem; cursor: pointer; margin-top: 2rem }
-    #gift-img {
-      display: none;
-      margin-top: 1rem;
-      width: 200px;
-      border-radius: 20px;
-      box-shadow: 0 0 10px rgba(255,0,0,0.5);
+    .gift-box {
+      font-size: 3rem;
+      cursor: pointer;
+      margin-top: 2rem;
+    }
+    form textarea {
+      width: 80%;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border-radius: 10px;
+      border: none;
+      font-size: 1rem;
+    }
+    form input[type="submit"] {
+      padding: 1rem 2rem;
+      background: white;
+      color: #ff1493;
+      border: none;
+      border-radius: 30px;
+      font-size: 1rem;
+      cursor: pointer;
     }
     #fireworks-container {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       pointer-events: none;
       z-index: 999;
+    }
+    #gift-img {
+      margin-top: 1rem;
+      width: 200px;
     }
   </style>
 </head>
@@ -82,19 +118,23 @@
   <header>🎂 Happy Birthday, Momina! 🎉</header>
 
   <div class="options">
-    <button onclick="fireTransition('wish')">💌 Read Your Wish</button>
-    <button onclick="fireTransition('game1')">🎯 Score Game</button>
-    <button onclick="fireTransition('game2')">🧠 Romantic Questions</button>
-    <button onclick="fireTransition('gift')">🎁 Surprise Gift</button>
+    <button onclick="playTransition('wish')">💌 Read Your Wish</button>
+    <button onclick="playTransition('game1')">🎯 Score Game</button>
+    <button onclick="playTransition('game2')">🧠 Romantic Questions</button>
+    <button onclick="playTransition('gift')">🏱 Surprise Gift</button>
     <button onclick="startFireworks()">🎆 Fireworks</button>
   </div>
 
-  <div class="content" id="wish"><p class="typing"></p></div>
+  <div class="content" id="wish">
+    <p class="typing"></p>
+  </div>
+
   <div class="content" id="game1">
     <h2>🎯 Score Game</h2>
     <button onclick="increaseScore()">💘 Tap to Score</button>
     <p>Your Score: <span id="score">0</span></p>
   </div>
+
   <div class="content" id="game2">
     <h2>💬 Romantic Questions</h2>
     <form action="https://formsubmit.co/YOUR_EMAIL_HERE" method="POST">
@@ -106,80 +146,103 @@
       <input type="submit" value="Send Answers 💌">
     </form>
   </div>
+
   <div class="content" id="gift">
-    <h2>🎁 Surprise Gift!</h2>
-    <div class="gift-box" onclick="revealGift()">🎁</div>
+    <h2>🏱 Click the Gift!</h2>
+    <div class="gift-box" onclick="revealGift()">🏱</div>
     <p id="gift-text"></p>
-    <img id="gift-img" src="https://i.imgur.com/ZF6s192.png" alt="Bouquet">
+    <img id="gift-img" src="https://i.imgur.com/ab3lSvm.png" alt="Red Rose Bouquet" style="display:none" />
   </div>
 
   <div id="fireworks-container"></div>
 
   <script>
-    const fullMessage = `Tum meri zindagi...`;
-    let idx = 0;
-    const typing = document.querySelector('.typing');
-
-    function typeWish(){
-      if (idx < fullMessage.length){
-        typing.textContent += fullMessage[idx++];
+    const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.";
+    const typingElem = document.querySelector(".typing");
+    let index = 0;
+    function typeWish() {
+      if (index < fullMessage.length) {
+        typingElem.innerHTML += fullMessage.charAt(index);
+        index++;
         setTimeout(typeWish, 50);
       }
     }
 
-    function fireTransition(id){
+    function playTransition(targetId) {
       const audio = document.getElementById('bg-music');
       audio.volume = 1;
       audio.play();
 
-      for (let i = 0; i < 25; i++){
+      const roseInterval = setInterval(() => {
         const rose = document.createElement('div');
         rose.className = 'rose';
         rose.style.left = Math.random() * window.innerWidth + 'px';
+        rose.style.animationDuration = (6 + Math.random() * 4) + 's';
+        rose.style.transform = `scale(${0.5 + Math.random()}) rotate(${Math.random() * 360}deg)`;
         document.body.appendChild(rose);
-        setTimeout(() => rose.remove(), 8000);
-      }
-      setTimeout(() => showSection(id), 1800);
+        setTimeout(() => rose.remove(), 10000);
+      }, 100);
+
+      setTimeout(() => {
+        clearInterval(roseInterval);
+        showSection(targetId);
+      }, 2000);
     }
 
-    function showSection(id){
-      document.querySelectorAll('.content').forEach(c => c.classList.remove('visible'));
+    function showSection(id) {
+      document.querySelectorAll('.content').forEach(div => div.classList.remove('visible'));
       document.getElementById(id).classList.add('visible');
-      if (id === 'wish'){
-        idx = 0; typing.textContent = '';
+      if (id === 'wish') {
+        index = 0;
+        typingElem.innerHTML = '';
         typeWish();
       }
     }
 
     let score = 0;
-    function increaseScore(){
-      document.getElementById('score').textContent = ++score;
+    function increaseScore() {
+      score++;
+      document.getElementById('score').textContent = score;
     }
 
-    function revealGift(){
-      document.getElementById('gift-text').textContent = "🌟 Surprise! Your forever love...";
+    function revealGift() {
+      document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🏱❤️";
       document.getElementById('gift-img').style.display = 'block';
     }
 
-    let fireworks = null;
-    function startFireworks(){
-      if (fireworks) return;
+    let fireworksInstance = null;
+    function startFireworks() {
       const container = document.getElementById('fireworks-container');
-      fireworks = new window.Fireworks(container, {
+      if (!container) return;
+      if (fireworksInstance) return;
+
+      fireworksInstance = new Fireworks.default(container, {
         rocketsPoint: 50,
         hue: { min: 0, max: 360 },
-        speed: 2, acceleration: 1.05,
-        friction: 0.95, gravity: 1.5,
-        particles: 60, trace: 3, explosion: 5,
+        delay: { min: 15, max: 30 },
+        speed: 2,
+        acceleration: 1.05,
+        friction: 0.97,
+        gravity: 1.5,
+        particles: 100,
+        trace: 3,
+        explosion: 5,
         autoresize: true,
         brightness: { min: 50, max: 80 },
-        delay: { min: 10, max: 30 },
-        sound: { enabled: true, files: ['https://www.fesliyanstudios.com/play-mp3/387'], volume: 1 }
+        sound: {
+          enabled: true,
+          files: ['https://www.fesliyanstudios.com/play-mp3/387'],
+          volume: 1
+        }
       });
-      fireworks.start();
+
+      fireworksInstance.start();
+
       setTimeout(() => {
-        fireworks.stop();
-        fireworks = null;
+        if (fireworksInstance) {
+          fireworksInstance.stop();
+          fireworksInstance = null;
+        }
       }, 10000);
     }
   </script>
