--- a/index.html
+++ b/index.html
@@ -1,64 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Happy Birthday Momina 🎂</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2.10.4/dist/fireworks.js"></script>
+  <meta charset="UTF-8">
+  <title>Happy Birthday, Momina 💖</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
       background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      overflow-x: hidden;
-      color: #fff;
-      position: relative;
+      overflow: hidden;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
     }
 
-    header {
+    h1 {
       text-align: center;
-      padding: 2rem 1rem;
-      font-size: 2.8rem;
-      font-family: 'Great Vibes', cursive;
-      color: #ffd700;
-      animation: glow 2s ease-in-out infinite alternate;
+      font-size: 3em;
+      margin: 30px 0 10px;
+      color: #ff69b4;
+      text-shadow: 0 0 20px #ff69b4;
     }
 
-    @keyframes glow {
-      from { text-shadow: 0 0 10px #fff; }
-      to { text-shadow: 0 0 30px #ff1493; }
-    }
-
-    .options {
+    .menu {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 1rem;
-      margin-top: 2rem;
+      margin-top: 30px;
     }
 
-    .options button {
-      background: #fff;
-      color: #ff1493;
+    .menu button {
+      background-color: white;
+      color: hotpink;
+      font-size: 1.2em;
       border: none;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
-      border-radius: 30px;
+      border-radius: 40px;
+      padding: 15px 40px;
+      margin: 10px;
       cursor: pointer;
-      transition: transform 0.3s;
+      transition: transform 0.3s, background 0.3s;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      box-shadow: 0 0 10px hotpink;
     }
 
-    .options button:hover {
+    .menu button:hover {
       transform: scale(1.1);
-      box-shadow: 0 0 15px pink;
+      background-color: #ffe6f0;
     }
 
-    .content {
-      padding: 2rem;
-      text-align: center;
+    .section {
       display: none;
-      animation: fadeIn 1s ease-in;
+      text-align: center;
+      font-size: 1.5em;
+      padding: 20px;
+      animation: fadeIn 1s ease-in-out;
     }
 
     @keyframes fadeIn {
@@ -66,21 +61,23 @@
       to { opacity: 1; transform: scale(1); }
     }
 
-    .visible {
-      display: block;
+    .star {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: white;
+      border-radius: 50%;
+      animation: twinkle 2s infinite;
     }
 
-    .typing {
-      font-size: 1.3rem;
-      margin-top: 2rem;
-      white-space: pre-line;
+    @keyframes twinkle {
+      0%, 100% { opacity: 0.2; }
+      50% { opacity: 1; }
     }
 
     .rose {
       position: fixed;
-      width: 60px;
-      height: 60px;
-      background: url('https://i.ibb.co/QJdLqZg/redrose.png') no-repeat center center / contain;
+      font-size: 2rem;
       animation: fall 8s linear;
       top: -100px;
       pointer-events: none;
@@ -88,186 +85,81 @@
     }
 
     @keyframes fall {
-      0% { transform: translateY(0) rotate(0deg); opacity: 1; }
-      100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
+      0% { transform: translateY(0); }
+      100% { transform: translateY(120vh) rotate(360deg); }
     }
 
-    .gift-box {
-      font-size: 3rem;
-      cursor: pointer;
-      margin-top: 2rem;
-    }
-
-    form textarea {
-      width: 80%;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-radius: 10px;
-      border: none;
-      font-size: 1rem;
-    }
-
-    form input[type="submit"] {
-      padding: 1rem 2rem;
-      background: white;
-      color: #ff1493;
-      border: none;
-      border-radius: 30px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    #fireworks-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+    .heart {
+      position: absolute;
+      font-size: 1.2em;
+      color: pink;
+      animation: float 4s ease-in-out infinite;
       pointer-events: none;
-      z-index: 1000;
     }
 
-    #gift-img {
-      margin-top: 1rem;
-      width: 200px;
+    @keyframes float {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(-100px); opacity: 0; }
     }
   </style>
 </head>
 <body>
-<audio id="bg-music" loop>
-  <source src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthdaySong.mp3" type="audio/mp3">
-</audio>
+  <h1>🎂 Happy Birthday, Momina 💛</h1>
 
-<header>🎂 Happy Birthday, Momina! 🎉</header>
+  <div class="menu">
+    <button onclick="showSection('wish')">💌 Read Your Wish</button>
+    <button onclick="showSection('game')">🎯 Score Game</button>
+    <button onclick="showSection('questions')">🧠 Romantic Questions</button>
+    <button onclick="showSection('gift')">🎁 Surprise Gift</button>
+    <button onclick="fireworks()">🎇 Fireworks</button>
+  </div>
 
-<div class="options">
-  <button onclick="playTransition('wish')">💌 Read Your Wish</button>
-  <button onclick="playTransition('game1')">🎯 Score Game</button>
-  <button onclick="playTransition('game2')">🧠 Romantic Questions</button>
-  <button onclick="playTransition('gift')">🎁 Surprise Gift</button>
-  <button onclick="startFireworks()">🎆 Fireworks</button>
-</div>
+  <div id="wish" class="section">Tum meri zindagi, mera sukoon, mera sab kuch ho. I love you ❤️</div>
+  <div id="game" class="section">Romantic score game will be here soon 😘</div>
+  <div id="questions" class="section">Romantic questions to make us even closer 💑</div>
+  <div id="gift" class="section">Your surprise gift is loading... 🎉</div>
 
-<div class="content" id="wish">
-  <p class="typing"></p>
-</div>
+  <audio autoplay loop>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+  </audio>
 
-<div class="content" id="game1">
-  <h2>🎯 Score Game</h2>
-  <button onclick="increaseScore()">💘 Tap to Score</button>
-  <p>Your Score: <span id="score">0</span></p>
-</div>
-
-<div class="content" id="game2">
-  <h2>💬 Romantic Questions</h2>
-  <form action="https://formsubmit.co/mirzaze0786@gmail.com" method="POST">
-    <textarea name="q1" placeholder="What do you love the most in me?"></textarea>
-    <textarea name="q2" placeholder="What was your first thought after seeing me?"></textarea>
-    <textarea name="q3" placeholder="Are you ready to marry me?"></textarea>
-    <textarea name="q4" placeholder="Do you actually love me?"></textarea>
-    <textarea name="q5" placeholder="Will you live with me till the end?"></textarea>
-    <input type="submit" value="Send Answers 💌">
-  </form>
-</div>
-
-<div class="content" id="gift">
-  <h2>🎁 Click the Gift!</h2>
-  <div class="gift-box" onclick="revealGift()">🎁</div>
-  <p id="gift-text"></p>
-  <img id="gift-img" src="https://i.imgur.com/ab3lSvm.png" alt="Red Rose Bouquet" style="display:none"/>
-</div>
-
-<div id="fireworks-container"></div>
-
-<script>
-const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.";
-const typingElem = document.querySelector(".typing");
-let index = 0;
-
-function typeWish() {
-  if (index < fullMessage.length) {
-    typingElem.innerHTML += fullMessage.charAt(index);
-    index++;
-    setTimeout(typeWish, 50);
-  }
-}
-
-function playTransition(targetId) {
-  const audio = document.getElementById('bg-music');
-  audio.volume = 1;
-  audio.play();
-
-  const roseInterval = setInterval(() => {
-    const rose = document.createElement('div');
-    rose.className = 'rose';
-    rose.style.left = Math.random() * window.innerWidth + 'px';
-    rose.style.animationDuration = (6 + Math.random() * 4) + 's';
-    document.body.appendChild(rose);
-    setTimeout(() => rose.remove(), 10000);
-  }, 100);
-
-  setTimeout(() => {
-    clearInterval(roseInterval);
-    showSection(targetId);
-  }, 2000);
-}
-
-function showSection(id) {
-  document.querySelectorAll('.content').forEach(div => div.classList.remove('visible'));
-  document.getElementById(id).classList.add('visible');
-  if (id === 'wish') {
-    index = 0;
-    typingElem.innerHTML = '';
-    typeWish();
-  }
-}
-
-let score = 0;
-function increaseScore() {
-  score++;
-  document.getElementById('score').textContent = score;
-}
-
-function revealGift() {
-  document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🏱❤️";
-  document.getElementById('gift-img').style.display = 'block';
-}
-
-let fireworksInstance = null;
-function startFireworks() {
-  const container = document.getElementById('fireworks-container');
-  if (!container) return;
-  if (fireworksInstance) return;
-
-  fireworksInstance = new Fireworks.default(container, {
-    rocketsPoint: 50,
-    hue: { min: 0, max: 360 },
-    delay: { min: 15, max: 30 },
-    speed: 2,
-    acceleration: 1.05,
-    friction: 0.97,
-    gravity: 1.5,
-    particles: 100,
-    trace: 3,
-    explosion: 5,
-    autoresize: true,
-    brightness: { min: 50, max: 80 },
-    sound: {
-      enabled: true,
-      files: ['https://www.fesliyanstudios.com/play-mp3/387'],
-      volume: 1
+  <script>
+    function showSection(id) {
+      document.querySelectorAll('.section').forEach(s => s.style.display = 'none');
+      const section = document.getElementById(id);
+      section.style.display = 'block';
+      for (let i = 0; i < 20; i++) {
+        const rose = document.createElement('div');
+        rose.className = 'rose';
+        rose.innerText = '🌹';
+        rose.style.left = Math.random() * window.innerWidth + 'px';
+        rose.style.animationDuration = (6 + Math.random() * 4) + 's';
+        document.body.appendChild(rose);
+        setTimeout(() => rose.remove(), 10000);
+      }
     }
-  });
 
-  fireworksInstance.start();
-
-  setTimeout(() => {
-    if (fireworksInstance) {
-      fireworksInstance.stop();
-      fireworksInstance = null;
+    // Fireworks effect using emojis
+    function fireworks() {
+      for (let i = 0; i < 30; i++) {
+        const heart = document.createElement('div');
+        heart.className = 'heart';
+        heart.innerText = '💖';
+        heart.style.left = Math.random() * window.innerWidth + 'px';
+        heart.style.top = Math.random() * window.innerHeight + 'px';
+        document.body.appendChild(heart);
+        setTimeout(() => heart.remove(), 4000);
+      }
     }
-  }, 10000);
-}
-</script>
+
+    // Starry night background
+    for (let i = 0; i < 150; i++) {
+      const star = document.createElement('div');
+      star.className = 'star';
+      star.style.top = Math.random() * window.innerHeight + 'px';
+      star.style.left = Math.random() * window.innerWidth + 'px';
+      document.body.appendChild(star);
+    }
+  </script>
 </body>
 </html>
